crates/ars-core/tests/ui/component_part_scope_not_string.stderr
error: ComponentPart requires a #[scope = "kebab-case-name"] attribute
 --> tests/ui/component_part_scope_not_string.rs:4:1
  |
4 | #[scope = 123]
  | ^^^^^^^^^^^^^^
