crates/ars-core/tests/ui/component_part_scope_not_string.rs
use ars_core::ComponentPart;

#[derive(ComponentPart)]
#[scope = 123]
enum Part {
    Root,
}

fn main() {}
